--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
    
   </head>
   <body>
-    <h1 class="text-center display-1">ToDo LIST</h1>
-   <div class="container col-8">
+    <h1 class="text-center ">ToDo LIST</h1>
+   <div class="container col-md-10 col-sm-12 col-lg-8">
     <div class="card">
       <div class="card-body">
         <div class="form-group">
-          <input type="text" id="taskinput" placeholder="Enter Your Task" class="form-control text-center">
+          <input type="text" id="taskinput" placeholder="Enter Your Task" class="form-control  text-center">
         </div>
         <div class="d-grid">
           <button id="addtaskbtn" class="btn ">Add Task</button>
@@ -26,17 +26,17 @@
    <div class="col-4 mx-auto ">
     <hr>
    </div>
-   <h1 class="text-center display-4 ">
+   <h1 class="text-center  ">
     YOUR TASK
    </h1>
    <div class="container ">
     <div class="card">
       <div class="card-body">
         <div class="grid cintainer mx-auto my-2  text-center m-auto">
-          <button id="removetasks" class="btn btn-danger w-50 none ">Remove All Tasks</button>
+          <button id="removetasks" class="btn btn-danger w-150 none ">Remove All Tasks</button>
 
         </div>
-         <div id="emptytask" class="alert alert-danger ~ text-center">
+         <div id="emptytask" class="alert alert-danger  text-center">
           Task Empty
          </div>
          <div id="alltasks">
